feat<user-service>: add getUser and auth endpoints
This commits adds two endpoints : getUser to get User entity and authUser to check if password is correct.
For this password handling, this commit includes hash management to avoid clear pwd in db
