# epitweet-backend/user-service/src/main/java/com/epita/controller/contracts/UserResponse.java
@@ -1,5 +1,6 @@
 package com.epita.controller.contracts;
 
+import lombok.AllArgsConstructor;
 import lombok.Getter;
 import lombok.Setter;
 import lombok.ToString;
@@ -9,8 +10,10 @@ import java.util.List;
 
 @Getter
 @Setter
+@AllArgsConstructor
 @ToString
-public class UserRequest {
+public class UserResponse {
+    ObjectId _id;
     String tag;
     String pseudo;
     String password;
